LDEV-4033 Remove unnecessary start.jsp pages

--- a/lams_tool_spreadsheet/web/includes/javascript/simple_spreadsheet/spreadsheet_offline.html
+++ b/lams_tool_spreadsheet/web/includes/javascript/simple_spreadsheet/spreadsheet_offline.html
@@ -60,8 +60,8 @@
 <div id="source" align="center">
 
   <script>
-	var code = parent.document.getElementById("spreadsheet.code").value;
-	loadScriptFileAndCode(code);
+	var spreadsheetCode = parent.document.getElementById("spreadsheet-code").value;
+	loadScriptFileAndCode(spreadsheetCode);
   </script>
 
 </div>
