LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Creating tags and shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -425,6 +425,13 @@ nav.navbar-heading {
     font-size:90%;
     line-height: 1.2;
   }
+  
+  .file-input-name {
+  	height: 25px; /* match height of btn */
+    padding:4px 9px;
+    font-size:90%;
+    line-height: 1.2;		
+  }
 }
 
 
