LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Using new tags and the shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_tool_daco/web/includes/css/daco.css
+++ b/lams_tool_daco/web/includes/css/daco.css
@@ -44,6 +44,10 @@ div.message img.icon {
 form#recordForm input, form#recordForm textarea, form#recordForm select{
 	margin-top: 6px;
 }
+/* overrides form#recordForm input for file input */
+form#recordForm input.file-input-name{ 
+	margin-top: 0px;
+}
 div.bigNumber{
 	font-weight: bold;
 	font-size: larger;
