--- a/lams_central/web/css/thickbox.css
+++ b/lams_central/web/css/thickbox.css
@@ -135,6 +135,7 @@
 	width:90%;
 	max-width: 1200px;
 	border-width: 4px 4px 2px 4px;/* to compensate TB_iframeContent's cut in height of 2px */
+	border-radius: 6px;
 }
 @media (min-width: 1330px) {
 	#navcontent ~ #TB_window {
@@ -144,4 +145,5 @@
 #TB_iframeContent {
 	height:calc(100% - 2px);
 	width:100%;
+	border-radius: 0 0 6px 6px;
 }
