--- a/lams_central/web/less/defaultHTML_learner.less
+++ b/lams_central/web/less/defaultHTML_learner.less
@@ -123,7 +123,12 @@ LAMS Learner Style
 }
 
 .panel-learner-page {
-	border-radius: 0px;
+	border-radius: 6px;
+	box-shadow: 0 1px 1px rgba(8, 8, 8, 0.88);
+}
+
+.panel-monitor-page {
+	border-radius: 6px;
 	box-shadow: 0 1px 1px rgba(8, 8, 8, 0.88);
 }
 
@@ -142,7 +147,7 @@ LAMS Learner Style
 }
 
 .panel-admin-page {
-	border-radius: 0px;
+	border-radius: 6px;
 	box-shadow: 0 1px 1px rgba(8, 8, 8, 0.88);
 	margin-top: 20px;
 }
