LDEV-4124: Add label size and color.

--- a/lams_central/web/css/authoring.css
+++ b/lams_central/web/css/authoring.css
@@ -137,6 +137,15 @@ select.propertiesContentFieldGradebook {
 	width: 99%;	
 }
 
+.dialogContents .labelPlusSize {
+	cursor: pointer;
+}
+
+.dialogContents .labelMinusSize {
+	margin-left: 15px;
+	cursor: pointer;
+}
+
 div#groupNamingDialog .btn-group,
 div#gtbDialog  .btn-group,
 div#ctbDialog .btn-group,
