LDEV-3962 Added border-radius property

--- a/lams_central/web/css/main.css
+++ b/lams_central/web/css/main.css
@@ -76,6 +76,7 @@ footer {
 	font-size: 75%;
 	background-color: #FFF;
 	border-radius: 0 0 6px 6px;
+	margin-bottom: 10px;
 }
 a {
     color: #5A738E; 
