--- a/lams_central/web/less/main.less
+++ b/lams_central/web/less/main.less
@@ -118,6 +118,7 @@ footer {
 	font-size: @footer-font-size;
 	background-color: @footer-background-color;
 	border-radius: 0 0 6px 6px;
+	margin-bottom: 10px;
 }
 a {
     color: @lesson-name-link-color; 
