LDEV-4239: Monitor tour with wiki help button moved onto tour dialog.

--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -163,6 +163,11 @@ td.sectionHeader {
 	margin: 5px 5px 5px 0;
 }
 
+.topButtonsContainer button {
+	float: right;
+	margin: 5px 5px 5px 0;
+}
+
 .lessonManageField {
 	margin-right: 5px;
 }
