--- a/lams_gradebook/web/includes/css/gradebook.css
+++ b/lams_gradebook/web/includes/css/gradebook.css
@@ -3,12 +3,12 @@
 }
 
 #export-selected-lessons-button {
-	margin-left: 295px;
 	margin-bottom: 10px;
 }
 
 #gbox_lessons-jqgrid {
-	margin: 10px 5px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .ui-widget-content {
