--- a/lams_tool_assessment/web/includes/css/assessment.css
+++ b/lams_tool_assessment/web/includes/css/assessment.css
@@ -155,3 +155,28 @@ table.table-row-spacing {
 .comments {
 	font-size: small; font-style: italic; margin-top: -8px;
 }
+
+.chartDiv {
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-bottom: 10px;
+	width: 95%;
+	height: 500px;
+}
+
+.bar rect {
+	fill: steelblue;
+}
+
+.bar text {
+	fill: #fff;
+	font: 14px sans-serif;
+}
+.zoom {
+	cursor: move;
+	fill: none;
+	pointer-events: all;
+}
+			
+
+
