LDEV-3962 added box-shadow property to main.jsp so it started to look more consistently with other pages

--- a/lams_central/web/less/main.less
+++ b/lams_central/web/less/main.less
@@ -107,6 +107,7 @@ html {
 	/*background: #fff;*/
 	padding: 7px 10px;
 	background: #fff;
+	box-shadow: 0 1px 1px rgba(8, 8, 8, 0.5);
 }
 #org-container {
 	padding: 17px 10px 17px 25px;
@@ -119,6 +120,7 @@ footer {
 	background-color: @footer-background-color;
 	border-radius: 0 0 6px 6px;
 	margin-bottom: 10px;
+	box-shadow: 0 1.4px 1px rgba(8, 8, 8, 0.5);
 }
 a {
     color: @lesson-name-link-color; 
@@ -240,6 +242,7 @@ a {
     border-bottom: 1px solid #D9DEE4;
     border-radius: 6px 6px 0 0;
     height: 53px;
+	box-shadow: 0 1px 1px rgba(8, 8, 8, 0.5);
 }
 .offcanvas-toggle-header {
     float: left;
@@ -321,6 +324,9 @@ ul.dropdown-usermenu li {
 .dropdown-menu a {
     cursor: pointer;
     border-radius: 6px;
+}
+#more-links-menu {
+	padding: 10px 5px;
 }
 .navbar-nav .open .dropdown-menu {
     position: absolute;
