--- a/lams_central/web/css/main.css
+++ b/lams_central/web/css/main.css
@@ -65,6 +65,7 @@ html {
 	/*background: #fff;*/
 	padding: 7px 10px;
 	background: #fff;
+	box-shadow: 0 1px 1px rgba(8, 8, 8, 0.5);
 }
 #org-container {
 	padding: 17px 10px 17px 25px;
@@ -76,6 +77,7 @@ footer {
 	font-size: 75%;
 	background-color: #FFF;
 	border-radius: 0 0 6px 6px;
+	box-shadow: 0 1.4px 1px rgba(8, 8, 8, 0.5);
 	margin-bottom: 10px;
 }
 a {
@@ -197,6 +199,7 @@ a {
     border-bottom: 1px solid #D9DEE4;
     border-radius: 6px 6px 0 0;
     height: 53px;
+	box-shadow: 0 1px 1px rgba(8, 8, 8, 0.5);
 }
 .offcanvas-toggle-header {
     float: left;
@@ -278,6 +281,9 @@ ul.dropdown-usermenu li {
 .dropdown-menu a {
     cursor: pointer;
     border-radius: 6px;
+}
+#more-links-menu {
+	padding: 10px 5px;
 }
 .navbar-nav .open .dropdown-menu {
     position: absolute;
