--- a/lams_central/web/css/jquery-ui-smoothness-theme.css
+++ b/lams_central/web/css/jquery-ui-smoothness-theme.css
@@ -170,7 +170,8 @@ button.ui-button-icons-only {
 }
 .ui-button-text-icon-secondary .ui-button-text,
 .ui-button-text-icons .ui-button-text {
-	padding: .4em 2.1em .4em 1em;
+	/
+padding: .4em 2.1em .4em 1em;
 }
 .ui-button-text-icons .ui-button-text {
 	padding-left: 2.1em;
@@ -884,7 +885,8 @@ body .ui-tooltip {
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
 	border: 1px solid #999999;
-	background: #dadada url("../images/css/jquery-ui-smoothness-theme/ui-bg_glass_75_dadada_1x400.png") 50% 50% repeat-x;
+	background: #f5f5f5;
+	/* background: #dadada url("../images/css/jquery-ui-smoothness-theme/ui-bg_glass_75_dadada_1x400.png") 50% 50% repeat-x; */
 	font-weight: normal;
 	color: #212121;
 }
