--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -74,7 +74,7 @@ input[type="checkbox"] {
 .dialogContainer .modal-body {
 	height : 100%;
 	max-height: calc(100% - 56px);
-	padding: 0;
+	padding: 10px;
 }
 
 div.dialogListItem {
