--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -234,14 +234,13 @@ td.contributeEntryCell a {
 
 #leftLearnerTable {
 	float: left;
-	width: 250px;
+	min-width: 250px;
 	height: 100%;
 }
 
 #rightMonitorTable {
-	margin-top: 4px;
 	height: 100%;
-	width: 250px;
+	min-width: 250px;
 }
 
 .dialogSearchPhrase {
