LDEV-4331 Fix + button showing big when using in small screen

--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -421,9 +421,8 @@ nav.navbar-heading {
 
 @media (min-width: 0px) and (max-width: 992px) {
   .btn-primary, .btn-default, .btn-success, .btn-info, .btn-danger {
-    padding:4px 9px;
+    padding:4px 9px 3px;
     font-size:90%;
-    line-height: 1.2;
   }
 }
 
