LDEV-4334: Moving Lesson Gradebook into Monitoring window so that it is always available and adding a Marks chart.

--- a/lams_central/web/css/chart.css
+++ b/lams_central/web/css/chart.css
@@ -18,3 +18,18 @@ div.tooltip {
     pointer-events: none;
 	opacity: 0;
 }
+
+/* Histogram Chart */
+.bar rect {
+	fill: steelblue;
+}
+
+.bar text {
+	fill: #fff;
+	font: 14px sans-serif;
+}
+.zoom {
+	cursor: move;
+	fill: none;
+	pointer-events: all;
+}
