--- a/lams_learning/web/css/kumalive.css
+++ b/lams_learning/web/css/kumalive.css
@@ -1,19 +1,53 @@
+#initDiv {
+	padding-top: 35vh;
+	text-align: center;
+}
+
+#createKumaliveDiv, #closedDiv {
+	display: none;
+	padding-top: 35vh;
+	text-align: center;
+}
+
+#closedDiv {
+	font-weight: bold;
+}
+
+#createKumaliveDiv input {
+	width: 60%;
+}
+
+table {
+	display: none;
+	table-layout: fixed;
+}
+
+#learnersCell {
+	height: 100vh;
+	width: 100%;
+	vertical-align: top;
+}
+
+#actionCell {
+	height: 100%;
+	border-left: thin black solid;
+	vertical-align: top;
+}
+
+#actionCell > * {
+	width: 350px;
+}
+
+#actionCell button {
+	width: 70%;
+	margin-top: 10px;
+}
+
 #raiseHandContainer {
 	display: none;
 	margin-bottom : 10px;
 	border-bottom: thin black solid;
 }
-
-table {
-	table-layout: fixed;
-}
-
-#actionCell {
-	width: 400px;
-	border-left: thin black solid;
-	vertical-align: top;
-}
-
 
 .learner {
 	width: 80px;
@@ -43,6 +77,7 @@ table {
 	left: 40px;
 	width: 0;
 	height: 0;
+	font-size: 0;
 }
 
 .profilePictureShown {
@@ -50,11 +85,13 @@ table {
 	left: 0;
 	width: 80px;
 	height: 80px;
+	font-size: 6em;
 }
 
 .name {
 	overflow: hidden;
 	text-overflow: ellipsis;
+	padding-top: 5px;
 }
 
 .learner .name {
@@ -63,24 +100,63 @@ table {
 
 
 .speaker {
-	width: 200px;
 	height: 300px;
-	margin: auto;
 	text-align: center;
 }
 
 .speaker .profilePicture{
 	width: 200px;
 	height: 200px;
+	font-size: 200px;
+	margin: auto;
 }
 
 .speaker .name {
 	font-size: 18px;
 }
 
+#teacher {
+	display: none;
+}
+
 #raiseHandPrompt {
 	display: none;
 	text-align: center;
-	padding-top: 100px;
+	padding-top: 20px;
+}
+
+#raiseHandPrompt i {
+	font-size: 140px;
+}
+
+.score {
+	display: none;
+	padding-top: 20px;
+	padding-left: 15px;
+}
+
+.score span {
+	font-weight: bold;
+}
+
+.score i {
+	font-size: 75px;
+	margin-right: 15px;
 	cursor: pointer;
+}
+
+.scoreGood {
+	color: green;
+}
+
+.scoreNeutral {
+	color: darkOrange;
+}
+
+.scoreBad {
+	color: red;
+}
+
+.scoreNone {
+	color: gray;
 }
