LDEV-4366 Make Kumalive responsive and SASSy

--- a/lams_central/conf/scss/_bootstrap-variables.scss
+++ b/lams_central/conf/scss/_bootstrap-variables.scss
@@ -289,7 +289,7 @@ $legend-border-color:            #e5e5e5;
 // Small screen / tablet
 //** Deprecated `$screen-sm` as of v3.0.1
 // $screen-sm:                  768px
-// $screen-sm-min:              $screen-sm
+$screen-sm-min:              768px
 //** Deprecated `$screen-tablet` as of v3.0.1
 // $screen-tablet:              $screen-sm-min
 
