LDEV-4195 Fix class cast exception
Input for assigning course groups to lesson groups can be either
grouping or branching. We need to detect both situations, otherwise we
get class cast exceptions.
Also adjust layout.

--- a/lams_central/web/css/authoring.scss
+++ b/lams_central/web/css/authoring.scss
@@ -284,6 +284,11 @@ div#ldStoreDialogContents #ldStoreDialogNameContainer input {
 	color: $gray-base;
 }
 
+div.branchMappingDialog {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
 div.branchMappingDialog .container-fluid {
 	padding-right: 0;
 }
