--- a/lams_central/web/css/orgGrouping.scss
+++ b/lams_central/web/css/orgGrouping.scss
@@ -42,8 +42,11 @@ div#titleDiv {
 	padding-left: 10px;
 }
 
+#gtbDialog .container-fluid {
+	padding-right: 0;
+}
 
-#gtbDialog > table {
+#gtbDialog table {
 	width: 100%;
 	height: 98%;
 	table-layout: fixed;
