--- a/lams_learning/web/css/kumalive.scss
+++ b/lams_learning/web/css/kumalive.scss
@@ -15,8 +15,15 @@
 	font-weight: bold;
 }
 
-#createKumaliveDiv input {
+#createKumaliveDiv input[type="text"] {
 	width: 60%;
+	display: inline;
+}
+
+#createKumaliveDiv #rubrics {
+	display: inline-block;
+	text-align: left;
+	margin: 10px auto;
 }
 
 #mainDiv {
@@ -115,6 +122,7 @@
 	display: none;
 	text-align: center;
 	padding-top: 20px;
+	margin-bottom: 20px;
 }
 
 #raiseHandPrompt i {
@@ -123,7 +131,6 @@
 
 .score {
 	display: none;
-	padding-top: 20px;
 }
 
 .score span {
@@ -134,6 +141,10 @@
 	font-size: 40px;
 	margin-right: 15px;
 	cursor: pointer;
+}
+
+.scoreButtons {
+	text-align: center;
 }
 
 .scoreGood {
@@ -150,6 +161,10 @@
 
 .scoreNone {
 	color: gray;
+}
+
+.score:last-child hr {
+	display: none;
 }
 
 @media (min-width : $screen-sm-min) {
