LDEV-4390 Default style buttons in Purple theme have no blue outline.

--- a/lams_central/web/css/purple_learner.scss
+++ b/lams_central/web/css/purple_learner.scss
@@ -10,3 +10,6 @@
 .btn-primary {
     @include button-variant($main_fav_org_link, $brand-primary, darken($brand-primary, 5%));
 }
+.btn:focus,.btn:active {
+   outline: none !important; // remove blue focus in Chrome
+}
