LDEV-4395 Portrait tag and javascript to display portraits
A new tag and javascript file shows the user portraits in one of 4 sizes
and either square or round. If no portrait exists a generic coloured
user icon is used. Portraits shown in Forum and Noticeboard Comments.

--- a/lams_central/conf/scss/_lams_variables.scss
+++ b/lams_central/conf/scss/_lams_variables.scss
@@ -77,3 +77,14 @@ $main_singlelesson_hover_background: #F0F8FF;
 $url_css_directory: "/lams/images/css/";
 $login_logo: "/lams/images/svg/lams_logo_black.svg";
 $login_logo_size: auto 20px;
+
+// generic portrait colors
+$portrait-color-0:#001f3f;
+$portrait-color-1:#FF851B;
+$portrait-color-2:#85144b;
+$portrait-color-3:#111111;
+$portrait-color-4:#3D9970;
+$portrait-color-5:#0074D9;
+$portrait-color-6:#FF4136;
+
+
