--- a/lams_central/conf/scss/_lams_variables_purple.scss
+++ b/lams_central/conf/scss/_lams_variables_purple.scss
@@ -89,3 +89,12 @@ $input-border-focus: lighten($brand-primary-bright, 20%);
 $alert-info-bg:      lighten($brand-primary-bright, 30%);
 $alert-info-text:    $brand-primary;
 $alert-info-border:  darken(adjust-hue($alert-info-bg, -10), 7%);
+
+// generic portrait colors
+$portrait-color-0:#001f3f;
+$portrait-color-1:#FF851B;
+$portrait-color-2:#85144b;
+$portrait-color-3:#111111;
+$portrait-color-4:#3D9970;
+$portrait-color-5:#0074D9;
+$portrait-color-6:#FF4136;
