--- a/lams_central/conf/scss/_bootstrap-variables.scss
+++ b/lams_central/conf/scss/_bootstrap-variables.scss
@@ -681,7 +681,7 @@ $alert-info-border:           $state-info-border;
 //
 //##
 
-// $panel-bg:                    #fff
+$panel-bg:                    #fff;
 // $panel-body-padding:          15px
 // $panel-heading-padding:       10px 15px
 // $panel-footer-padding:        $panel-heading-padding
