LDEV-4395: modify message layout
Changed the message layout based on feedback

--- a/lams_central/web/css/_learner_base.scss
+++ b/lams_central/web/css/_learner_base.scss
@@ -184,7 +184,10 @@ a:focus {
 }
 /* Comments/Forum classes */
 .msg .panel-heading {
-  padding: 3px;
+  padding: 3px 5px 3px 5px;
+}
+.msg .subject {
+      font-weight: 500;
 }
 .msg {
   margin-bottom: 5px;
